wallet_core/error_category/error_category_derive/tests/sentry_capture_error/fail_on_enum.stderr
error: attribute macro `sentry_capture_error` not supported here
 --> tests/sentry_capture_error/fail_on_enum.rs:4:1
  |
4 | enum Foo {}
  | ^^^^
