wallet_core/error_category/error_category_derive/tests/sentry_capture_error/fail_on_enum.rs
use error_category::sentry_capture_error;

#[sentry_capture_error]
enum Foo {}

fn main() {}
